# gd32g5x3-cmake-vscode

./: README.md
Drivers/BSP/GD32G553C_START/: gd32g553c_start.c  gd32g553c_start.h
Drivers/BSP/GD32G553M_START/: gd32g553m_start.c  gd32g553m_start.h
Drivers/BSP/GD32G553Q_EVAL/: gd32g553q_eval.c  gd32g553q_eval.h  gd32g553q_lcd_eval.c  gd32g553q_lcd_eval.h  lcd_font.h
Drivers/BSP/GD32G553R_EVAL/: gd32g553r_eval.c  gd32g553r_eval.h
Drivers/BSP/GD32G553V_START/: gd32g553v_start.c  gd32g553v_start.h
Drivers/GD32G5x3_standard_peripheral/Include/: gd32g5x3_adc.h  gd32g5x3_can.h  gd32g5x3_cau.h  gd32g5x3_cla.h  gd32g5x3_cmp.h  gd32g5x3_cpdm.h  gd32g5x3_crc.h  gd32g5x3_dac.h  gd32g5x3_dbg.h  gd32g5x3_dma.h  gd32g5x3_exmc.h  gd32g5x3_exti.h  gd32g5x3_fac.h  gd32g5x3_fft.h  gd32g5x3_fmc.h  gd32g5x3_fmc_ramfunc.h  gd32g5x3_fwdgt.h  gd32g5x3_gpio.h  gd32g5x3_hpdf.h  gd32g5x3_hrtimer.h  gd32g5x3_i2c.h  gd32g5x3_lptimer.h  gd32g5x3_misc.h  gd32g5x3_pmu.h  gd32g5x3_qspi.h  gd32g5x3_rcu.h  gd32g5x3_rtc.h  gd32g5x3_spi.h  gd32g5x3_syscfg.h  gd32g5x3_timer.h  gd32g5x3_tmu.h  gd32g5x3_trigsel.h  gd32g5x3_trng.h  gd32g5x3_usart.h  gd32g5x3_vref.h  gd32g5x3_wwdgt.h
Drivers/GD32G5x3_standard_peripheral/Source/: gd32g5x3_adc.c  gd32g5x3_can.c  gd32g5x3_cau.c  gd32g5x3_cau_aes.c  gd32g5x3_cau_des.c  gd32g5x3_cau_tdes.c  gd32g5x3_cla.c  gd32g5x3_cmp.c  gd32g5x3_cpdm.c  gd32g5x3_crc.c  gd32g5x3_dac.c  gd32g5x3_dbg.c  gd32g5x3_dma.c  gd32g5x3_exmc.c  gd32g5x3_exti.c  gd32g5x3_fac.c  gd32g5x3_fft.c  gd32g5x3_fmc.c  gd32g5x3_fmc_ramfunc.c  gd32g5x3_fwdgt.c  gd32g5x3_gpio.c  gd32g5x3_hpdf.c  gd32g5x3_hrtimer.c  gd32g5x3_i2c.c  gd32g5x3_lptimer.c  gd32g5x3_misc.c  gd32g5x3_pmu.c  gd32g5x3_qspi.c  gd32g5x3_rcu.c  gd32g5x3_rtc.c  gd32g5x3_spi.c  gd32g5x3_syscfg.c  gd32g5x3_timer.c  gd32g5x3_tmu.c  gd32g5x3_trigsel.c  gd32g5x3_trng.c  gd32g5x3_usart.c  gd32g5x3_vref.c  gd32g5x3_wwdgt.c
Examples/ADC/ADC0_ADC1_ADC2_routine_parallel/: .source_project
Examples/ADC/ADC0_ADC1_routine_parallel/: .source_project
Examples/ADC/ADC0_ADC2_temperature_Vref_Vbat/: .source_project
Examples/ADC/ADC0_TIMER_trigger_inserted_channel/: .source_project
Examples/ADC/ADC0_channel_differential_mode/: .source_project
Examples/ADC/ADC0_routine_channel_discontinuous_mode/: .source_project
Examples/ADC/ADC0_routine_channel_with_DMA/: .source_project
Examples/ADC/ADC0_software_trigger_routine_channel_polling/: .source_project
Examples/ADC/ADC1_analog_watchdog0/: .source_project
Examples/ADC/ADC1_analog_watchdog1/: .source_project
Examples/ADC/ADC3_resolution_oversample_gain/: .source_project
Examples/CAN/Pretended_Networking_mode/: .source_project
Examples/CAN/communication_FDmode/: .source_project
Examples/CAN/communication_Loopback/: .source_project
Examples/CAN/communication_classical_CAN/: .source_project
Examples/CAU/CAU_AESECB_mode/: .source_project
Examples/CAU/CAU_AES_GCM_CCM_CFB_OFB_mode/: .source_project
Examples/CAU/CAU_AES_modes/: .source_project
Examples/CAU/CAU_DES_TDES_modes/: .source_project
Examples/CAU/CAU_TDESECB_mode/: .source_project
Examples/CLA/logic_AND_function_interrupt/: .source_project
Examples/CLA/logic_AND_function_use_ADC_CONV_and_GPIO_as_input/: .source_project
Examples/CLA/logic_AND_function_use_GPIO/: .source_project
Examples/CLA/logic_XOR_function_use_GPIO/: .source_project
Examples/CLA/logic_XOR_function_use_TIMER1_CH1_and_GPIO_as_input/: .source_project
Examples/CLA/use_CLA0_result_as_CLA1_input/: .source_project
Examples/CMP/Blanking_output/: .source_project
Examples/CMP/Interrupt/: .source_project
Examples/CMP/NVIC_interrupt/: .source_project
Examples/CMP/Port_output/: .source_project
Examples/CMP/Timer0_CH0IC/: .source_project
Examples/CORTEX_M/MPU_memory_management_fault/: .source_project
Examples/CRC/CRC_calculate/: .source_project
Examples/DAC/DACC_independent_trigger_LFSR_noise/: .source_project
Examples/DAC/DACC_output_voltage/: .source_project
Examples/DAC/DACC_output_voltage/Drivers/GD32G5x3_standard_peripheral/: CMakeLists.txt
Examples/DAC/DACC_simultaneous_trigger_triangle_noise/: .source_project
Examples/DAC/DACC_software_trigger_LFSR_noise/: .source_project
Examples/DAC/DAC_ADC_convert/: .source_project
Examples/DAC/DAC_DMA_convert/: .source_project
Examples/DAC/DAC_LFSR_noise_mode/: .source_project
Examples/DAC/DAC_TRGISEL_trigger/: .source_project
Examples/DAC/DAC_triangle_noise_mode/: .source_project
Examples/DBG/DBG_TIMER_STOP/: .source_project
Examples/DMA/DMA_RequestGen/: .source_project
Examples/DMA/DMA_SYNC/: .source_project
Examples/DMA/RAM_TO_RAM/: .source_project
Examples/DMA/RAM_TO_USART/: .source_project
Examples/DMA/Reload_exti/: .source_project
Examples/EXMC/NORFLASH/: .source_project
Examples/EXMC/SRAM/: .source_project
Examples/EXTI/Key_external_interrupt_mode/: .source_project
Examples/FAC/Fir_dma/: .source_project
Projects/GD32G553C_START/04_USART_HyperTerminal_Interrupt/Drivers/BSP/GD32G553C_START/: CMakeLists.txt
Projects/GD32G553M_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32G553M_START/: CMakeLists.txt
Projects/GD32G553Q_EVAL/12_EXMC_TouchScreen/Drivers/BSP/GD32G553Q_EVAL/: CMakeLists.txt
Projects/GD32G553R_EVAL/18_TIMER_Breath_LED/Drivers/BSP/GD32G553R_EVAL/: CMakeLists.txt
Projects/GD32G553V_START/04_USART_HyperTerminal_Interrupt/Drivers/BSP/GD32G553V_START/: CMakeLists.txt
Template/: .source_project  CMakeLists.txt
(+765 files in other folders)
